Version 0.6 (???)
-----------------

 * macros of the same name can nest (previously this was possible
   only for macros with unique names)
 * macros can now return Markup objects directly (Stream, Fragment,
   Element, and string (preferably unicode) objects were always okay)
 * made creoleparser smarter about adding <p> tags
 * improved rawlink detection regex

Version 0.5.1 (Dec 8 2008)
--------------------------

 * converted docs to Sphinx
 * improved rendering of unknown macros 
 * added title attribute to images
 * fixed bug with markup in raw links
 * fixed bug with unicode characters in wiki links
 * fixed bug preventing plain-text rendering
 * tests.py was refactored to use unittest (thanks duncan.mcgreggor!)
 * special characters in wiki links get quoted for urls
 * links refactored to support mailto:
 * wiki links can no longer have adjacent spaces
 * creoleparser now works on Goggle App Engine

Version 0.5.0 (May 31 2008)
---------------------------

 * special syntax introduced for macros spanning block level markup 
 * macros returning Creole can contain other macros (issue 6)
 * macros refactored, pre-processing no longer used, more robust
 * fixed bug with macros that output unicode strings (issue 4)
 * macro names can now include capitals and periods (issue 5)
 * added support for custom space characters for interwiki
   links (interwiki_links_space_chars) 
 * api changed for default interwiki links space character, the
   wiki_links_space_char is used instead of an underscore. (issue 3)

Version 0.4.0 (March 24 2008)
-----------------------------

 * added support for custom urls for interwiki links (interwiki_links_funcs)
 * user supplied uri sanitation added
 * a macro on a line by itself will no longer be <p>aragraphed 

Version 0.3.3 (Dec 16 2007)
---------------------------

 * changed api slightly for wiki_links_class_func (see source)
 * added suport for custom urls for wiki links (wiki_links_path_func)